samples/_failures_safe/1761512563_73131e_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_fd19dba6.c: In function ‘main’:
./samples/SAFE/__tmp_fd19dba6.c:138:9: error: ‘analyze_log’ undeclared (first use in this function); did you mean ‘analyze_logs’?
  138 |         analyze_log
      |         ^~~~~~~~~~~
      |         analyze_logs
./samples/SAFE/__tmp_fd19dba6.c:138:9: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_fd19dba6.c:138:20: error: expected ‘;’ at end of input
  138 |         analyze_log
      |                    ^
      |                    ;
./samples/SAFE/__tmp_fd19dba6.c:138:9: error: expected declaration or statement at end of input
  138 |         analyze_log
      |         ^~~~~~~~~~~
./samples/SAFE/__tmp_fd19dba6.c:138:9: error: expected declaration or statement at end of input
